Closed Bug 48827 Opened 25 years ago Closed 24 years ago

small problem with table layout on TV listings on www.tvguide.com

Categories

(Core :: Layout: Tables, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: KingRamze, Assigned: karnaze)

References

()

Details

(Keywords: testcase)

Attachments

(3 files)

In my TV listings on www.tvguide.com, I've noticed that the catagory seperaters (lines dividing hour and half hour blocks on the listings) are missing from the left side, and double thickness on the right side. I'm assuming that the left seperater jumped to the far right, thus doubling the thickness of the right side, but this layout bug doesn't affect the middle dividers. ex: half hour show half hour show | half hour show || half hour show I don't know if this bug has already been submitted, because it occurs within a java applet, I think... so, it's difficult to tell what's going on behind the scenes a relatively minor bug, but one that should be looked into Thanks!
over to html tables, and confirming on win98. Adding helpwanted keyword for a testcase...
Status: UNCONFIRMED → NEW
Component: Browser-General → HTMLTables
Ever confirmed: true
Keywords: helpwanted
Whiteboard: Need testcase
Reassigning to the component owner.
Assignee: asa → karnaze
QA Contact: doronr → chrisd
Looks ok to me on Win98, 2000111108. Might have been fixed around September 1 in bug 27529. mbell8@sc.rr.com, do you still see this problem on newer Mozilla builds? If you do, please attach a copy of the page to this bug, because the page depends on the zip code you enter and the time you grab the page. Otherwise please resolve this bug as worksforme. Thanks :)
This problem is still present on fairly recent linux builds (2000110608). Also see similar problem with viewing portfolios and quicken.com. I've created an attachment of my listings. Maybe this needs to be moved to a linux bug rather than Windows?
I see the problem on the attached page (for Nashville) on Win98, so all/all.
Severity: trivial → minor
Keywords: helpwantedqawanted
OS: Windows 95 → All
Hardware: PC → All
QA contact update
QA Contact: chrisd → amar
The behavior of this bug has changed between mozilla 0.8.1 and build 2001032915. All separators are now visible, but some are misaligned and the right edge is ragged. The problem seems to be with colspans; the space between two joined cells is shifted slightly with respect to that between the separate cells and the total width is off. As with the original problem, this is quite sensitive to table width; see attacehed testcase. Could this be the result of the fix to bug 45055?
Are people still seeing this? It seems OK to me on Linux with recent builds. There is a small matter of some of the columns not being lined up they way they are probably intended to be (off by a pixel or two) but the issue with missing lines seems to be fixed here and the other place I saw it.
What I see is that in the attachment fom 03/30/01, the rows of the last two tables don't have the same length.
What I see is that in the attachment fom 03/30/01, the rows of the last two tables don't have the same length.
I still see the problem with the latest build ID: 20001051420 If you view the attached test case on 03/30/01, the rows of the last two tables does not have the same length.. Adding the testcase keyword
Keywords: testcase
Changing the status to " testcase created" ......
Whiteboard: Need testcase → testcase created
Status: NEW → ASSIGNED
Keywords: qawanted
Target Milestone: --- → mozilla0.9.4
r= bernd
sr=attinasi
Keywords: patch
Whiteboard: testcase created → testcase created, checked in on trunk
Target Milestone: mozilla0.9.4 → mozilla0.9.5
reassigning to m0.9.6
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Keywords: patch
Resolution: --- → FIXED
Whiteboard: testcase created, checked in on trunk
Target Milestone: mozilla0.9.6 → mozilla0.9.4
The patch was checked into the trunk and made it into the m094 branch. fixed.
Verified Build ID : 2001-10-08-05-0.9.4 Platform: WIN2K
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: