bug 48827 - round column width to even pixel when calculating percent column. sr=attinasi,r=bernd